--- a/remote.html
+++ b/remote.html
@@ -12,15 +12,25 @@ function set1()
 }
 </script>
 </head>
-<body>
+
+
+<div style="background-image:url(https://dl.dropboxusercontent.com/u/5590057/sf1apcnews2012raspberry-pi-logo_mainImage8.jpg8.jpg);width:625px;height:447px;color:black;font-size:18px;">
     <div style="text-align:center">
     <h1>Raspberry Pi GPIO</h1>
+</div>
 
-    <img src="https://dl.dropboxusercontent.com/u/5590057/led-accesso.jpg" id="f" onmousedown="set1()" onmouseup="clear01(event)">
+
+
+<body background="./led-accesso.jpg">
+    <div style="text-align:center">
+    <h3>Premi sulle due icone sotto per accendere o spegnere il led</h3>
+
+    <img src="https://dl.dropboxusercontent.com/u/5590057/led128.png"  width="128" heigth="128"  id="f" onmousedown="set1()" onmouseup="clear01(event)">
 <br>
-    <img src="https://dl.dropboxusercontent.com/u/5590057/led-spento.jpg" id="l" onmousedown="set0()" onmouseup="clear01(event)">
+    <img src="https://dl.dropboxusercontent.com/u/5590057/led-off.png" width="128" height="128" id="l" onmousedown="set0()" onmouseup="clear01(event)">
 <br>
     </div>
 
 </body>
+
 </html>
